test/errors/identifiers_error/zs/clashing_identifiers/clashing_structure_field_names_error.zs
package clashing_identifiers.clashing_structure_field_names_error;

struct Structure
{
    uint8 field1;
    uint8 Field1;
};
